# kai-xiaok-plugins

./: .gitignore  LICENSE  README.md  README.zh-CN.md  registry.json
.governance-log/: Kevin-MBP.local-1780497846.jsonl
docs/: canvas-plugin-implementation-plan-v2.md  canvas-plugin-implementation-plan-v3.md  canvas-plugin-implementation-plan-v4.md  canvas-plugin-implementation-plan.md
plugins/cua-computer-use/: plugin.json
plugins/kai-infinity-canvas/: .gitignore  README.md  index.html  package-lock.json  package.json  plugin.json  vite.config.ts
plugins/kai-infinity-canvas/evals/: canvas-eval.mjs
plugins/kai-infinity-canvas/scripts/: prebuild.mjs  start-canvas.mjs
plugins/kai-infinity-canvas/server/: index.mjs
plugins/kai-meeting-assistant/: plugin.json
plugins/kai-report-creator/: plugin.json
plugins/kai-slide-creator/: SKILL.md  plugin.json  vendor-manifest.json
plugins/kai-slide-creator/mcp-servers/slide-renderer/: check_style_fidelity.py  low_context.py  preset_capabilities.py  preset_contracts.py  preset_profile_renderer.py  preset_profile_specs.py  preset_runtime_qa.py  preset_support.py  pyproject.toml  requirements.txt  server.py  style_signature_eval.py  title_profiles.py  validate_html.py
plugins/kai-slide-creator/mcp-servers/slide-renderer/tests/: test_list_presets.py  test_render_slide.py  test_server_contract.py  test_stdio_protocol.py  test_validate_brief.py
plugins/kai-slide-creator/mcp-servers/slide-renderer/tests/fixtures/: invalid-brief-bad-preset.json  invalid-brief-missing-required.json  valid-brief.json
scripts/: vendor.sh
(+174 files in other folders)
